--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Dataset
+
+*.pt
+.DS_Store
+
+__pycache__
+
+HAM10000_images_part*
+wandb
+dataset
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
